<resources>
    <string name="app_name">TravelJournal</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="save_note">Save Note</string>
    <string name="delete">Delete Note</string>
    <string name="add_travel_note">Add Travel Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="ini_adalah_profile_fragment">Ini adalah Profile Fragment</string>
    <string name="add_note">Add note</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_to_horizon_register">New to Horizon? Register</string>
    <string name="login_with_google">Login with Google</string>
    <string name="default_web_client_id">705802733378-prose66u6vbb9qp0eo13npefvqd4pjq9.apps.googleusercontent.com</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="fab_content_desc">Tambahkan Catatan Perjalanan</string>
    <string name="hello_my_notes">Hello,\nMy Notes</string>
    <string name="detail_labeled_fragment">Detail Labeled Fragment</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_image">Profile Image</string>
    <string name="logout">Logout</string>
    <string name="edit_note">Edit Note</string>

    <string name="save">Save</string>
    <string name="delete_profile">Delete Profile</string>

</resources>